@@ -1,3 +1,8 @@
+2012-06-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* ordchr.c (do_ord, do_chr): Improve argument checking and
+	lint messages.
+
 2012-06-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): Remove *.awk.
