@@ -1,3 +1,8 @@
+2012-06-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkapi.h: Improve the documentation of the return values
+	per Andrew Schorr.
+
 2012-06-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* TODO.xgawk: Updated.
